--- a/src/scss/abstracts/_index.scss
+++ b/src/scss/abstracts/_index.scss
@@ -1,3 +1,4 @@
-@forward 'mixins';
-@forward 'functions';
-@forward 'breakpoints';
+@forward "mixins";
+@forward "functions";
+@forward "breakpoints";
+@forward "variables";
