--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -2,7 +2,11 @@
 
 html,
 body {
-    height: 100%;
+    width: 100%;
+    // height: 100vh; /* always match viewport height */
+    margin: 0;
+    padding: 0;
+    // overflow: hidden; /* prevent scrollbars */
 }
 
 body {
@@ -13,13 +17,27 @@ body {
     background-color: var(--color-white);
     height: auto;
     overflow-x: hidden;
-    line-height: 1.7;
+    line-height: 1.4;
 }
 
 h1,
 h2,
 p {
     margin: 0;
+}
+
+h1,
+h2 {
+    line-height: 1;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+picture {
+    width: 100%;
 }
 
 ul {
