--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -137,6 +137,10 @@
             align-items: center;
             justify-content: center;
 
+            &:focus {
+                box-shadow: inset 0 0 0 3px var(--color-white);
+            }
+
             &-icon {
                 path {
                     stroke: var(--color-grey-500);
