--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -54,10 +54,6 @@
             gap: a.rem(16);
         }
 
-        &--slide-1 {
-            // display: flex;
-        }
-
         &--slide-2 {
             display: none;
         }
@@ -76,15 +72,23 @@
             text-transform: uppercase;
             letter-spacing: 12px;
             background-color: transparent;
+            color: var(--color-black);
             border: none;
             cursor: pointer;
 
+            &:hover {
+                color: var(--color-grey-500);
+                transition: color 0.3s ease;
+            }
+
             &-icon {
                 transition: transform 0.3s ease;
+                color: var(--color-black);
             }
 
             &:hover &-icon {
                 animation: bounce-right 1s cubic-bezier(0.25, 1.25, 0.5, 1) infinite both;
+                color: var(--color-grey-500);
             }
 
             @keyframes bounce-right {
@@ -136,6 +140,18 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: background-color 0.3s ease-in-out;
+
+            &:hover {
+                background-color: var(--color-grey-800);
+
+                .homepage__item-nav-arrow-btn-icon {
+                    path {
+                        color: var(--color-grey-800);
+                        transition: color 0.3s ease-in-out;
+                    }
+                }
+            }
 
             &:focus {
                 box-shadow: inset 0 0 0 3px var(--color-white);
@@ -144,7 +160,7 @@
             &-icon {
                 path {
                     stroke: var(--color-grey-500);
-                    transition: stroke 0.3s ease;
+                    transition: stroke 0.3s ease-in-out;
 
                     &:hover {
                         stroke: var(--color-white);
